%% Class Diagram: Review Evidence & Self-Assessment
%% Evidence status: Implemented.
%% Updated 2026-06-26 (verified).
%% Scope: Supporting review records created around a review session.

classDiagram
    class ReviewSession {
        +UUID id
        +UUID task_assignment_id
        +UUID reviewee_id
        +String status
    }

    class ReviewEvidence {
        +UUID id
        +UUID review_session_id
        +String evidence_type
        +String url
        +String title
        +String description
        +UUID uploaded_by
        +DateTime created_at
        +DateTime updated_at
    }

    class TaskSelfAssessment {
        +UUID id
        +UUID task_assignment_id
        +UUID user_id
        +Numeric overall_satisfaction
        +String difficulty_felt
        +Numeric confidence_level
        +Text what_went_well
        +Text what_would_do_different
        +JSONB blockers_encountered
        +JSONB skills_felt_lacking
        +JSONB skills_felt_strong
        +DateTime submitted_at
        +DateTime created_at
        +DateTime updated_at
    }

    class TaskAssignment {
        +UUID id
        +UUID task_id
        +UUID assignee_id
    }

    ReviewSession "1" --> "*" ReviewEvidence : evidence items
    TaskAssignment "1" --> "0..1" TaskSelfAssessment : reflection
    ReviewSession "1" --> "0..1" TaskSelfAssessment : tied via assignment

    note for ReviewEvidence "Evidence can be attached by review participants
    to support review decisions and later admin investigation."
    note for TaskSelfAssessment "Self-assessment is submitted by the reviewee,
    independent from reviewer scoring. Only reviewee can upsert."
